# bluepds

./: .clippy.toml  .env  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  build.rs  default.nix  default.toml  deployment.bicep  deploymentBindingHack.bicep  flake.nix  shell.nix
.cargo/: config.toml
.github/workflows/: ci.yaml  rel.yaml
.nix/: flake.nix
.sqlx/: query-02a5737bb92665ef0a3dac013eb03366ab6b31a5c4ab856e6458a52704b86e23.json  query-0691ae8fc507df3efff83edb1e24e3c426dd7240a8fe60f69a30e5d99993ccdd.json  query-0c112e544ad7f92f3699ee79d2bd674ff72041c4dd6050c00a1fa3eac38553e6.json  query-14d61d3aea227b8881d7864952a75b571f0ea28c77ce4229f80ad9638c1a26d6.json  query-19dc08b9f2f609e0610b6bd1e4908fc5d7922cc95b13de3214a055bf36b80284.json  query-1d91d3f785f8f3e86baa2af1e643364b242bb6e8dbc0d50b86602022c0000ed4.json  query-1d9681bf4929b3f6dcfbb55fd5e15fb2593615b6e796c7d63731b78b0c43738c.json  query-1db52857493a1e8a7004872eaff6e8fe5dec41579dd57d696008385b8d23788d.json  query-22c1e98ac038509ad16ce437e6670a59d3fc97a05ea8b0f1f80dba0157c53e13.json  query-243e2127a5181657d5e08c981a7a6d395fb2112ebf7a1a676d57c33866310add.json  query-2852f6a99c3ca7c74b1d26071eb7cc23d2f57583bc54a5688876bf32033589bd.json  query-2918ecf03675a789568c777904966911ca63e991dede42a2d7d87e174799ea46.json  query-2d3be8d066142671c690f78afe7a3e8f798ecf82001023f9a4f1bff4d27be959.json  query-2e13e052dfc64f29d9da1bce2bf844cbb918ad3bb01e386801d3b0d3be246573.json  query-3074da6a0710071a955e216473453bb7e9f6bba6a8fe91f39d41b535f0cc3266.json  query-3516a6de0f3aa40b301d60479f5c34d0fd21a800328a05458ecc3ac688d016e6.json  query-3b4745208f268678a84401e522c3836e0632ca34a0f23bbae5297d076610f0ab.json  query-3d1a877177899665c37393beae31a399054b7c02d3871c6c5d317923fec8442e.json  query-4198b96804f3a0a805e441857b452e84a083d80dca12ce95c545dc9eadbac0c3.json  query-459be26080e3497b3807d22e86377eee9e19366709864e3369c867cef01c83bb.json  query-4ab7fb7fa17d2f1bdecfa7b466d95087eb99aa495f39d589d2921f150680cabc.json  query-50a7b5f57df41d06a8c11c8268d8dbef4c76bcf92c6b47b6316bf5e39fb889a7.json  query-51f7f9d5bf4cbfe372a8fa130f4cabcb57766638792d61297df2fb91c2fe2937.json  query-5920026900edcbc3127d9ecbcfc19393b27429fafd49aa25b4f3fc296d744560.json  query-5aed2a8fc372cc0c7b5eaee23ab2a4b63c3b3d21027759f81a925e87af9077c9.json  query-5bbf8300ca519576e4f60074cf16756bc1dca79f43e1e89c5a08b8c9d95d241f.json  query-5d4586821dff3ed0fd1e352946751c3bb66610a472d8c42a7bfa3a565fccc30a.json  query-5ea8376fbbe3077b2fc62187cc29a2d03eda91fa468c7fe63306f04e160ecb5d.json  query-5f17a390750b52886f8c3ba80cb16776f3430bc91c4158aafb3012a7812a97cc.json  query-6b0a871527c5c37663ee17ec6f5ec4f97521900f45e549b0b065004a4e2e6207.json  query-7097fe3862d11df75ae5e2c0d0462086fe30d712c606d1ebd1d6efc57222e5fe.json  query-71aa490bbe1ebed3e3f1773feff83f8b8fcb4174bbde8fcafc6d621f16d665d4.json  query-73fd3e30b7694c92cf9309751d186fe622fa7d99fdf56dde7e60c3696581116c.json  query-7e81c11620a407b74b513cb291d8e6f89bfa9e66db21a28a35b16118e46e20bf.json  query-7eb22fdfc107b33361c599fcd4ae3a4a4fafef8438c41e1fdc6d4f7fd44f1094.json  query-7f068de6ddcd9b182447dfc6f9974f5da2b2aad57be233428a9a5bede8bbf43d.json  query-813409fb7218c548ee3e8b1226559686cd40aa81ac1b68659b087276cbb0137d.json  query-865f757ca7c8b15357622bf0d1a25745288f87ad6ace019c1f4316a4ba1efb34.json  query-87cbc4f5bb615163ff62234e0de0c69b543179cffcdaf79fcae5fd6fdc7e14c7.json  query-8baa623d8de4a3b63464d32065a4b9be2a005e1df3b85be8c452dc9dfe01fa35.json  (+35 more)
migrations/: 20250104202448_init.down.sql  20250104202448_init.up.sql  20250217052304_repo_status.up.sql  20250219055555_account_plc_root.down.sql  20250219055555_account_plc_root.up.sql  20250220235950_private_data.down.sql  20250220235950_private_data.up.sql  20250223015249_blob_ref.down.sql  20250223015249_blob_ref.up.sql  20250330074000_oauth.down.sql  20250330074000_oauth.up.sql  20250502032700_jti.down.sql  20250502032700_jti.up.sql  20250507035800_sqlite_blockstore.down.sql  20250507035800_sqlite_blockstore.up.sql  20250508251242_actor_store.down.sql  20250508251242_actor_store.up.sql  20250508252057_blockstore.up.sql  20250510222500_actor_migration.up.sql
migrations/2025-05-15-175917_init/: down.sql  up.sql
migrations/2025-05-15-182818_init_diff/: down.sql  up.sql
migrations/2025-05-17-094600_oauth_temp/: down.sql  up.sql
migrations_actor/2025-05-15-182818_init_diff/: down.sql  up.sql
src/: actor_endpoints.rs  auth.rs  config.rs  db.rs  did.rs  error.rs  firehose.rs  lib.rs  main.rs  metrics.rs  mmap.rs  models.rs  oauth.rs  pipethrough.rs  plc.rs  schema.rs  serve.rs  service_proxy.rs  storage.rs  tests.rs
src/account_manager/: mod.rs
src/account_manager/helpers/: account.rs  auth.rs  email_token.rs  invite.rs  password.rs  repo.rs
src/actor_store/: actor_store.rs  actor_store_handler.rs  actor_store_reader.rs  actor_store_resources.rs  actor_store_transactor.rs  actor_store_writer.rs  blob.rs  blob_fs.rs  block_map.rs  db.rs  mod.rs  preference.rs  prepared_write.rs  record.rs  repo.rs  resources.rs  sql_blob.rs  sql_repo.rs
src/actor_store/blob/: background.rs  mod.rs  placeholder.rs  reader.rs  store.rs  transactor.rs
src/actor_store/db/: migrations.rs  mod.rs  schema.rs
src/actor_store/preference/: mod.rs  reader.rs  transactor.rs
src/actor_store/record/: mod.rs  reader.rs  transactor.rs
src/actor_store/repo/: mod.rs  reader.rs  sql_repo_reader.rs  sql_repo_transactor.rs  transactor.rs
src/apis/: mod.rs
src/apis/com/atproto/: mod.rs
src/apis/com/atproto/identity/: identity.rs
src/apis/com/atproto/repo/: apply_writes.rs  create_record.rs  delete_record.rs  describe_repo.rs  ex.rs  get_record.rs  import_repo.rs  list_missing_blobs.rs  list_records.rs  mod.rs  put_record.rs  upload_blob.rs
src/db/: cast.rs  db.rs  migrator.rs  mod.rs  pagination.rs  util.rs
src/db/tables/: mod.rs  moderation.rs
src/endpoints/: identity.rs  mod.rs  oauth.rs  repo.rs  server.rs  sync.rs
src/endpoints/repo/: apply_writes.rs
src/repo/: block_map.rs  mod.rs  types.rs
src/repo/storage/: mod.rs
src/storage/: car.rs  mod.rs  sqlite.rs
